# Document-Format-Correction

./: .gitattributes  .gitignore  LICENSE  README.md  config.example.json  install_windows.bat  launch_gui.bat  prompt_generator.py  pyproject.toml
docs/: 项目详情.md
docs/NLP/: [Content_Types].xml
docs/NLP/customXml/: itemProps1.xml
docs/NLP/docProps/: app.xml  core.xml  custom.xml
docs/NLP/word/: document.xml  endnotes.xml  fontTable.xml  footer1.xml  footer2.xml  footer3.xml  footnotes.xml  header1.xml  header2.xml  header3.xml  numbering.xml  settings.xml  styles.xml
docs/error/docProps/: core.xml
docs/examples/: fixed-template-contract.sample.json  fixed-template-contract.sample.md
scripts/: launch_gui.py  parse_docx.py  run_gui.py  write_docx_from_ir.py
sessions/: ts_agent_runtime.db-shm  ts_agent_runtime.db-wal
src/: __init__.py
src/frontend/: App.tsx  index.css  index.html  main.tsx  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/python/: __init__.py
src/ts/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
templates/: test_1.json  公文模板.json
tests/: test_chat_window.py  test_frontend_styles.py  test_launch_gui.py  test_legacy_cleanup.py  test_model_config.py  test_model_worker.py  test_project_paths.py  test_prompt_generator.py  test_python_tool_runner.py  test_template_bridge.py  test_ts_agent_bridge.py  test_ts_agent_bridge_commands.py  test_universal_docx_parser.py  test_web_api.py  test_web_window.py  test_write_docx_from_ir.py  test_write_docx_module_import.py
(+144 files in other folders)
